# nut-up

./: CLAUDE.md  Makefile  README.md  nutup  pyproject.toml
.claude/: starting-plan.md  web-ui-improvements.md
deploy/: config.example.yaml  nut-up.service
nut_up/: api.py  cli.py  config.py  daemon.py  machine.py  nut.py  wake.py  web.py
nut_up/static/: app.css
nut_up/templates/: base.html  dashboard.html  login.html
nut_up/templates/partials/: machine_card.html  status.html  toast.html
