[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nut-up"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "wakeonlan>=3.1",
]

[project.scripts]
nut-up = "nut_up.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nut_up = ["templates/*.html", "templates/partials/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"
