[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nut-up"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Upper bounds cap supply-chain blast radius: a future major-version
    # release can't land on `make update` without a deliberate bump here.
    # For exact transitive-dep pinning, run `make lock` on the install host
    # to produce requirements.lock — committed and preferred over PyPI
    # resolution if present.
    "fastapi>=0.111,<0.137",
    "uvicorn[standard]>=0.29,<0.48",
    "jinja2>=3.1,<4",
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
    "wakeonlan>=3.1,<4",
]

[project.scripts]
nut-up = "nut_up.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nut_up = ["templates/*.html", "templates/partials/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
